--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,6 +6,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/logout">Logout</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/create_garage">Create garage</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/profile">Profile</a>
+        </li>
       </ul>
     </div>
   </div>
