--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,26 @@
     <h1>Hello, {{session["username"]}} welcome back to your car collection!</h1>
     <br>
     <br>
+    <h3>Your garages:</h3>
+    <br>
+    <table class="table table-striped table-hover" style="max-width: 600px;">
+  <thead>
+    <tr>
+      <th scope="col">Garage ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Capacity</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for garage in garages %}
+    <tr>
+      <td>{{garage.id}}</td>
+      <td>{{garage.name}}</td>
+      <td>{{garage.capacity}}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
   </body>
 </html>
 {% endblock %}
