--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,30 +1,48 @@
 {% extends "base.html"%}
 
 {% block content %}
+    <style>
+      .buttons-column {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .buttons-container {
+          display: flex;
+          gap: 10px;
+      }
+    </style>
     <br>
     <h1>Hello, {{session["username"]}} welcome back to your car collection!</h1>
     <br>
     <br>
     <h3>Your garages:</h3>
     <br>
-    <table class="table table-striped table-hover" style="max-width: 600px;">
-  <thead>
-    <tr>
-      <th scope="col">Garage ID</th>
-      <th scope="col">Name</th>
-      <th scope="col">Capacity</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for garage in garages %}
-    <tr>
-      <td>{{garage.id}}</td>
-      <td>{{garage.name}}</td>
-      <td>{{garage.capacity}}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+      <table class="table table-striped table-hover" style="max-width: 600px;">
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Capacity</th>
+            <th scope="col">Open/Remove garage</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for garage in garages %}
+          <tr>
+            <td>{{garage.name}}</td>
+            <td>{{garage.capacity}}</td>
+            <td class="buttons-column">
+              <div class="buttons-container">
+
+                  <a href="/garage?garage_id={{garage.id}}"><button type="button" class="btn btn-primary btn-sm open-button">Open</button></a>
+                  <a href="/remove_garage?garage_id={{garage.id}}"><button type="button" class="btn btn-dark btn-sm remove-button">Remove</button></a>
+              </div>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+    </table>
   </body>
 </html>
+
 {% endblock %}
