--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,30 @@
-{% extends "base.html"%}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <title>{% block title %} Car collection {% endblock %}</title>
+  </head>
+  <body style="overflow: hidden">
+    {% include 'navbar.html' %}
+    <div>
+      <img src="/static/bugattipic.jpg" style="width: 100%" />
+      <div
+        style="position: absolute; width: 100%; top: 10%; text-align: center"
+      >
+        <h1 style="color: white">Welcome to Car Collection!</h1>
+      </div>
+    </div>
 
-{% block content %}
-    <br>
-    <h1>Welcome to car collection!</h1>
-    <br>
-    <br>
+    <div class="d-flex flex-column align-items-center"></div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
-{% endblock %}
