--- a/templates/profile.html
+++ b/templates/profile.html
@@ -34,8 +34,8 @@
             <td class="buttons-column">
               <div class="buttons-container">
 
-                  <a href="/garage?garage_id={{garage.id}}"><button type="button" class="btn btn-primary btn-sm open-button">Open</button></a>
-                  <a href="/remove_garage?garage_id={{garage.id}}"><button type="button" class="btn btn-dark btn-sm remove-button">Remove</button></a>
+                  <a href="/garage/{{garage.id}}"><button type="button" class="btn btn-primary btn-sm open-button">Open</button></a>
+                  <a href="/remove_garage/{{garage.id}}"><button type="button" class="btn btn-dark btn-sm remove-button">Remove</button></a>
               </div>
             </td>
           </tr>
