--- a/templates/index.html
+++ b/templates/index.html
@@ -7,24 +7,37 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     />
+    <style>
+      .parent {
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        background-image: url("/static/bugattipic.jpg");
+        background-size: cover;
+        background-position: center;
+      }
+
+      .content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        color: white;
+      }
+    </style>
     <title>{% block title %} Car collection {% endblock %}</title>
   </head>
   <body style="overflow: hidden">
     {% include 'navbar.html' %}
-    <div>
-      <img src="/static/bugattipic.jpg" style="width: 100%" />
-      <div
-        style="position: absolute; width: 100%; top: 10%; text-align: center"
-      >
-        <h1 style="color: white">Welcome to Car Collection!</h1>
+    <div class="parent">
+      <div class="content">
+        <h1>Welcome to Car Collection!</h1>
       </div>
     </div>
 
     <div class="d-flex flex-column align-items-center"></div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
