Now when removing garage the cars in it and in other tables are being deleted from db

--- a/templates/add_car.html
+++ b/templates/add_car.html
@@ -39,7 +39,7 @@
           class="form-control"
           id="exampleInputPassword1"
           name="production_year"
-          placeholder="enter production year:"
+          placeholder="enter production year (more than 1885):"
           required
         />
       </div>
