--- a/templates/create_garage.html
+++ b/templates/create_garage.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label" style="width: 400px; display: inline-block; text-align: left;">The capacity of the garage</label>
-                    <input type="number" class="form-control" id="quantity" name="capacity" required  placeholder="enter capacity:" style="width: 400px;">
+                    <input type="number" class="form-control" id="quantity" name="capacity" required  placeholder="enter capacity (no more than 20):" style="width: 400px;">
                 </div>
                 <div class="sign-up-button">
                     <button type="submit" class="btn btn-secondary"> Create</button>
