User is able to remove cars from garage having opened a garage cars also are being removed from db

--- a/templates/garage.html
+++ b/templates/garage.html
@@ -22,7 +22,7 @@
       <td>{{car.prod_year}}</td>
       <td class="buttons-column">
           <div class="buttons-container">
-              <a href="#"><button type="button" class="btn btn-outline-danger">Remove</button></a>
+              <a href="/remove_car?garage_id={{garage_id}}&car_id={{car.id}}"><button type="button" class="btn btn-outline-danger">Remove</button></a>
           </div>
       </td>
     </tr>
