--- a/templates/add_car.html
+++ b/templates/add_car.html
@@ -17,6 +17,7 @@
           name="carbrand"
           placeholder="enter brand name:"
           required
+          value="{% if message == 'Invalid production year!' and not success %}{{car_brand}}{% elif message == 'Garage is full!' and not success %}{{car_brand}} {% elif 'brand' not in empty_fields and not success %}{{car_brand}}{% endif %}"
         />
       </div>
       <div class="mb-3">
@@ -28,6 +29,7 @@
           name="carmodel"
           placeholder="enter model name:"
           required
+          value="{% if message == 'Invalid production year!' and not success %}{{car_model}}{% elif message == 'Garage is full!' and not success %}{{car_model}}{% elif 'model' not in empty_fields and not success %}{{car_model}}{% endif %}"
         />
       </div>
       <div class="mb-3">
@@ -41,6 +43,7 @@
           name="production_year"
           placeholder="enter production year (more than 1885):"
           required
+          value="{% if message == 'Invalid production year!' and not success %}{{prod_year}}{% elif message == 'Garage is full!' and not success %}{{prod_year}}{% elif 'production year' not in empty_fields and not success %}{{prod_year}}{% endif %}"
         />
       </div>
       <div class="mb-3">
@@ -48,7 +51,7 @@
           >Garage to be added in</label
         >
         <select class="form-control" name="garage_id" required>
-          <option disabled selected value="">Select Garage</option>
+          <option value="">Select Garage</option>
           {% for garage in garages %}
           <option value="{{ garage.id }}">{{ garage.name }}</option>
           {% endfor %}
@@ -58,6 +61,7 @@
         <button type="submit" class="btn btn-primary">add car</button>
       </div>
     </div>
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
   </form>
 </div>
 {% if message %}
