--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,15 +11,15 @@
             <div class = "signup-form" style="display: inline-block;">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label" style="width: 400px; display: inline-block; text-align: left;">Username</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" name="username" placeholder="enter username:" {% if username and not success %} value="{{username}}" {% endif %} style="width: 400px;" >
+                    <input type="text" class="form-control" id="exampleInputEmail1" name="username" placeholder="enter username (max 20 characters):" required {% if username and not success %} value="{{username}}" {% endif %} style="width: 400px;"  >
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label" style="width: 400px; display: inline-block; text-align: left;">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" name="password" placeholder="enter password:" style="width: 400px;">
+                    <input type="password" class="form-control" id="exampleInputPassword1" name="password" required placeholder="enter password (8-20 characters):" style="width: 400px;" >
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label" style="width: 400px; display: inline-block; text-align: left;"> Confirm password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" name="password2" placeholder="confirm password:" style="width: 400px;">
+                    <input type="password" class="form-control" id="exampleInputPassword1" name="password2" required placeholder="confirm password:" style="width: 400px;" >
                 </div>
                 <div class="sign-up-button">
                     <button type="submit" class="btn btn-secondary"> Create</button>
